# RFD_Model_Router

./: .gitignore  pyproject.toml  query  routing_config.yaml
docs/adr/: ADR-006.md
docs/directives/: RFD_ModelRouter_Phase7_RunPod_Directive.md
docs/state/: current.md
rfd_model_router/: api.py  logger.py  models.py  pricer.py  router.py  server.py  throttle.py
rfd_model_router/adapters/: __init__.py  anthropic_adapter.py  base.py  compute_base.py  gemini_adapter.py  groq_adapter.py  openrouter_adapter.py  runpod_adapter.py
rfd_model_router/jobs/: __init__.py  owl_job.py  yolo_job.py
tests/: test_adapters.py  test_api.py  test_compute_jobs.py  test_logger.py  test_models.py  test_openai_compat.py  test_openrouter_adapter.py  test_pricer.py  test_router.py  test_runpod_adapter.py  test_streaming.py  test_throttle.py
