[project]
name = "rfd-model-router"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "anthropic>=0.25.0",
    "groq>=0.9.0",
    "google-generativeai>=0.5.0",
    "openai>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.19.0",
]

[project.scripts]
rfd-model-router = "rfd_model_router.server:main"
rfd-model-router-api = "rfd_model_router.api:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.27.0",
]

[tool.uv]
default-groups = ["dev"]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
